Design polishing ,Button fixes , Wizard fixes , Bug Report Button works.

--- a/WolvenKit/Views/AudioTool/AudioToolView.xaml
+++ b/WolvenKit/Views/AudioTool/AudioToolView.xaml
@@ -1,8 +1,10 @@
 ﻿<catel:DataWindow x:Class="WolvenKit.Views.AudioTool.AudioToolView"
                   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                  xmlns:catel="http://schemas.catelproject.com"   xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks" 
-                  xmlns:hc="https://handyorg.github.io/handycontrol" xmlns:svl1="clr-namespace:WPFSoundVisualizationLib;assembly=WPFSoundVisualizationLibNet5"
+                  xmlns:catel="http://schemas.catelproject.com"   
+                  xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks" 
+                  xmlns:hc="https://handyorg.github.io/handycontrol" 
+                  xmlns:svl1="clr-namespace:WPFSoundVisualizationLib;assembly=WPFSoundVisualizationLibNet5"
                   ShowInTaskbar="True" 
                   AllowsTransparency="True" 
                   ResizeMode="CanResizeWithGrip" 
