--- a/WolvenKit/Views/UserControlHostWindowView.xaml
+++ b/WolvenKit/Views/UserControlHostWindowView.xaml
@@ -28,20 +28,42 @@
             <Grid Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}">
 
                 <Grid x:Name="DraggableTitleBar" VerticalAlignment="Top" Grid.ColumnSpan="2" Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}" MouseLeftButtonDown="DraggableTitleBar_MouseLeftButtonDown">
+
                     <!--TitleBar  Please add onmousedown event to be able to drag the window-->
-                    <Button Click="ButtonClose" Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}" BorderBrush="{x:Null}"  HorizontalAlignment="Right" VerticalAlignment="Center" Margin="3,3,5,3" >
-                        <iconPacks:PackIconCodicons   Kind="Close"/>
+                    <Button 
+                    Style="{StaticResource ButtonIcon}" 
+                    hc:IconElement.Geometry="{DynamicResource GlobalClose}" 
+                    Click="ButtonClose" 
+                    Background="Transparent" 
+                    BorderBrush="{x:Null}"  
+                    HorizontalAlignment="Right" 
+                    VerticalAlignment="Center" 
+                    Margin="3,3,5,3" >
                     </Button>
-                    <Button  Click="ButtonMinimize" BorderBrush="{x:Null}" Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="3,3,45,3" >
-                        <iconPacks:PackIconCodicons  Kind="ChromeMinimize"/>
+
+                    <Button  Width="40"
+                    Style="{StaticResource ButtonIcon}"
+                    hc:IconElement.Geometry="{DynamicResource GlobalMinimize}"
+                    Click="ButtonMinimize"
+                    BorderBrush="{x:Null}"
+                    Background="Transparent" 
+                    HorizontalAlignment="Right"
+                    VerticalAlignment="Center"
+                    Margin="3,3,45,3" >
                     </Button>
-                    <TextBlock Text="Project Wizard" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="5,0,0,0"/>
+
+
+                    <!--
+
+                    <TextBlock Margin="13,0,0,0" Height="23" Text="{Binding Content, ElementName=UserContentControl }"  HorizontalAlignment="Left" VerticalAlignment="Center"/> 
+                     No Title needed for Wizards imo -->
+
                 </Grid>
 
 
-                <Grid  Margin="3,33,3,3">
+                <Grid  Margin="3,3,3,3">
 
-                    <ContentControl x:Name="UserContentControl"/>
+                    <ContentControl  x:Name="UserContentControl"/>
 
                 </Grid>
             </Grid>
