--- a/WolvenKit/Views/AssetBrowser/AssetBrowserView.xaml
+++ b/WolvenKit/Views/AssetBrowser/AssetBrowserView.xaml
@@ -4,7 +4,7 @@
                   xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
                    xmlns:hc="https://handyorg.github.io/handycontrol"
                   xmlns:catel="http://schemas.catelproject.com" xmlns:Fluent="urn:fluent-ribbon" ShowInTaskbar="True" AllowsTransparency="True" ResizeMode="CanResizeWithGrip" BorderBrush="{x:Null}" WindowStartupLocation="CenterScreen" Width="1200" MinHeight="600" MaxHeight="800" WindowStyle="None" Title="Asset Browser" >
-   
+
     <catel:DataWindow.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -26,61 +26,82 @@
                 <RowDefinition Height="9*"/>
             </Grid.RowDefinitions>
 
-            <Grid x:Name="DraggableTitleBar" Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}" MouseLeftButtonDown="DraggableTitleBar_MouseLeftButtonDown">
-                <Button Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}" BorderBrush="{x:Null}"  HorizontalAlignment="Right" VerticalAlignment="Center" Margin="3,3,5,3" Click="Button_Click">
-                        <iconPacks:PackIconCodicons   Kind="Close"/>
-                    </Button>
-                    <Button BorderBrush="{x:Null}" Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="3,3,45,3" Click="Button_Click_1">
-                        <iconPacks:PackIconCodicons  Kind="ChromeMinimize"/>
-                    </Button>
-                    <TextBlock Text="Asset Browser" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="5,0,0,0"/>
-                </Grid>
+            <Grid x:Name="DraggableTitleBar" VerticalAlignment="Top" Grid.ColumnSpan="2" Background="{DynamicResource RegionBrush}" MouseLeftButtonDown="DraggableTitleBar_MouseLeftButtonDown">
 
-                <StackPanel Grid.Row="1" VerticalAlignment="Top"  >
+                <!--TitleBar  Please add onmousedown event to be able to drag the window-->
+                <Button 
+                    Style="{StaticResource ButtonIcon}" 
+                    hc:IconElement.Geometry="{DynamicResource GlobalClose}" 
+                    Click="Button_Click" 
+                    Background="Transparent" 
+                    BorderBrush="{x:Null}"  
+                    HorizontalAlignment="Right" 
+                    VerticalAlignment="Center" 
+                    Margin="3,3,5,3" >
+                </Button>
+
+                <Button  Width="40"
+                    Style="{StaticResource ButtonIcon}"
+                    hc:IconElement.Geometry="{DynamicResource GlobalMinimize}"
+                    Click="Button_Click_1"
+                    BorderBrush="{x:Null}"
+                    Background="Transparent" 
+                    HorizontalAlignment="Right"
+                    VerticalAlignment="Center"
+                    Margin="3,3,45,3" >
+                </Button>
+                <TextBlock Text="Asset Browser" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="5,0,0,0"/>
+            </Grid>
+
+            <StackPanel Grid.Row="1" VerticalAlignment="Top"  >
                 <ToolBarTray     Style="{DynamicResource MahApps.Styles.ToolBarTray}" >
                     <ToolBar  Band="0" Style="{StaticResource ToolBarBaseStyle}" Padding="6">
-                            <Menu Background="Transparent" VerticalAlignment="Center">
-                                <MenuItem Header="View">
-                                    <MenuItem Header="Empty">
-                                    </MenuItem>
-                                    <MenuItem Header="Empty">
-                                    </MenuItem>
+                        <Menu Background="Transparent" VerticalAlignment="Center">
+                            <MenuItem Header="View">
+                                <MenuItem Header="Empty">
                                 </MenuItem>
-                                <MenuItem Header="Edit">
-                                    <MenuItem Header="Empty">
-                                    </MenuItem>
-                                    <MenuItem Header="Empty">
-                                    </MenuItem>
-                                    <MenuItem Header="Empty">
-                                    </MenuItem>
+                                <MenuItem Header="Empty">
                                 </MenuItem>
-                                <MenuItem Header="Bookmarks"/>
-                                <MenuItem Header="Tabs"/>
-                            </Menu>
-                        </ToolBar>
+                            </MenuItem>
+                            <MenuItem Header="Edit">
+                                <MenuItem Header="Empty">
+                                </MenuItem>
+                                <MenuItem Header="Empty">
+                                </MenuItem>
+                                <MenuItem Header="Empty">
+                                </MenuItem>
+                            </MenuItem>
+                            <MenuItem Header="Bookmarks"/>
+                            <MenuItem Header="Tabs"/>
+                        </Menu>
+                    </ToolBar>
 
                     <ToolBar Band="0" Style="{StaticResource ToolBarBaseStyle}" Padding="6">
-                            <Menu Background="Transparent" VerticalAlignment="Center">
-                                <Button Background="Transparent" BorderBrush="{x:Null}">
-                                    <!-- Back button-->
-                                    <iconPacks:Codicons Kind="ArrowLeft"/>
-                                </Button>
-                                <Button Background="Transparent" BorderBrush="{x:Null}" Click="ButtonBase_OnClick">
-                                    <!-- Folder button-->
-                                    <iconPacks:Codicons Kind="Home"/>
-                                </Button>
+                        <Menu Background="Transparent" VerticalAlignment="Center">
+                            <Button Style="{StaticResource ButtonIcon}" Width="40" hc:IconElement.Geometry="{DynamicResource GlobalLeftArrow}" Background="Transparent" BorderBrush="{x:Null}">
+                            </Button>
+                            <Button  Style="{StaticResource ButtonIcon}" Width="40" hc:IconElement.Geometry="{DynamicResource AssetBrowserHome}" Background="Transparent" BorderBrush="{x:Null}" Click="ButtonBase_OnClick" RenderTransformOrigin="0.5,0.5">
+                                <Button.RenderTransform>
+                                    <TransformGroup>
+                                        <ScaleTransform/>
+                                        <SkewTransform/>
+                                        <RotateTransform Angle="180"/>
+                                        <TranslateTransform/>
+                                    </TransformGroup>
+                                </Button.RenderTransform>
+
+                            </Button>
                             <hc:TextBox Text="{Binding Path=CurrentNode.FullPath, Mode=OneWay}" Width="500"></hc:TextBox>
 
-                                <Button Background="Transparent" BorderBrush="{x:Null}">
-                                    <!-- Star button-->
-                                    <iconPacks:Codicons Kind="StarFull"/>
-                                </Button>
-                            </Menu>
-                        </ToolBar>
+                            <Button   Style="{StaticResource ButtonIcon}" Width="40" hc:IconElement.Geometry="{DynamicResource AssetBrowserStar}" Background="Transparent" BorderBrush="{x:Null}">
 
-                        <ToolBar Band="0" Style="{StaticResource ToolBarBaseStyle}" Padding="6">
-                            <Menu Background="Transparent" VerticalAlignment="Center">
-                                <TextBlock Text="Class :"/>
+                            </Button>
+                        </Menu>
+                    </ToolBar>
+
+                    <ToolBar Band="0" Style="{StaticResource ToolBarBaseStyle}" Padding="6">
+                        <Menu Background="Transparent" VerticalAlignment="Center">
+                            <TextBlock Text="Class :"/>
                             <hc:ComboBox ItemsSource="{Binding Classes}" SelectedItem="{Binding SelectedClass}" MinWidth="100">
                                 <ComboBox.ItemsPanel>
                                     <ItemsPanelTemplate>
@@ -89,16 +110,16 @@
                                 </ComboBox.ItemsPanel>
                             </hc:ComboBox>
                         </Menu>
-                        </ToolBar>
+                    </ToolBar>
 
-                        <ToolBar Band="0" Style="{StaticResource ToolBarBaseStyle}" Padding="6">
-                            <Menu Background="Transparent" VerticalAlignment="Center">
+                    <ToolBar Band="0" Style="{StaticResource ToolBarBaseStyle}" Padding="6">
+                        <Menu Background="Transparent" VerticalAlignment="Center">
                             <hc:SearchBar  MinWidth="100" SearchStarted="SearchBar_OnSearchStarted" hc:InfoElement.Placeholder="Search something"></hc:SearchBar>
-                            </Menu>
-                        </ToolBar>
+                        </Menu>
+                    </ToolBar>
 
-                        <ToolBar Band="0" Style="{StaticResource ToolBarBaseStyle}" Padding="6">
-                            <Menu Background="Transparent" VerticalAlignment="Center">
+                    <ToolBar Band="0" Style="{StaticResource ToolBarBaseStyle}" Padding="6">
+                        <Menu Background="Transparent" VerticalAlignment="Center">
                             <hc:ComboBox ItemsSource="{Binding Extensions}" SelectedItem="{Binding SelectedExtension}" MinWidth="100">
                                 <ComboBox.ItemsPanel>
                                     <ItemsPanelTemplate>
@@ -107,18 +128,18 @@
                                 </ComboBox.ItemsPanel>
                             </hc:ComboBox>
                         </Menu>
-                        </ToolBar>
+                    </ToolBar>
 
-                    </ToolBarTray>
-                </StackPanel>
-            
-                <Grid Grid.Row="2">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="2*"/>
-                        <ColumnDefinition Width="4*"/>
-                    </Grid.ColumnDefinitions>
+                </ToolBarTray>
+            </StackPanel>
 
-                    <Grid>
+            <Grid Grid.Row="2">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="2*"/>
+                    <ColumnDefinition Width="4*"/>
+                </Grid.ColumnDefinitions>
+
+                <Grid>
                     <hc:CheckTreeView Margin="0" ItemsSource="{Binding RootNode.SubDirectories}"  BorderBrush="{DynamicResource MahApps.Brushes.Accent4}">
                         <TreeView.ItemTemplate>
                             <HierarchicalDataTemplate ItemsSource="{Binding SubDirectories}">
@@ -126,9 +147,9 @@
                             </HierarchicalDataTemplate>
                         </TreeView.ItemTemplate>
                     </hc:CheckTreeView>
-                    </Grid>
+                </Grid>
 
-                    <Grid Grid.Column="1">
+                <Grid Grid.Column="1">
 
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="1*"/>
@@ -138,18 +159,20 @@
                     </Grid.ColumnDefinitions>
 
                     <Grid Grid.Column="1" Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}"  >
-                        <Grid x:Name="PreviewGridAsset">  <!-- Use this grid for preview UC -->
-                            
+                        <Grid x:Name="PreviewGridAsset">
+                            <!-- Use this grid for preview UC -->
+
                         </Grid>
                     </Grid>
-                        <GridSplitter   Grid.Row="0" Grid.Column="1" Margin="2,0,2,0"
+                    <GridSplitter   Grid.Row="0" Grid.Column="1" Margin="2,0,2,0"
                                         Width="3"   Height="40"      HorizontalAlignment="Left" 
                                         VerticalAlignment="Stretch"
                                         Background="{DynamicResource MahApps.Brushes.Accent3}" 
                                         ShowsPreview="False" >
                     </GridSplitter>
-                        <hc:TabControl IsAnimationEnabled="True" ShowCloseButton="True" IsDraggable="True"  >
-                        <hc:TabItem Header="Depot"> <!-- Bind Header to selected item in treeview-->
+                    <hc:TabControl IsAnimationEnabled="True" ShowCloseButton="True" IsDraggable="True"  >
+                        <hc:TabItem Header="Depot">
+                            <!-- Bind Header to selected item in treeview-->
                             <ListView BorderBrush="{DynamicResource MahApps.Brushes.Accent4}" MouseDoubleClick="ListView_MouseDoubleClick" Background="Transparent" ItemsSource="{Binding CurrentNodeFiles}">
                                 <ListView.View>
                                     <GridView>
@@ -160,8 +183,15 @@
                             </ListView>
                         </hc:TabItem>
                     </hc:TabControl>
-                        <Button VerticalAlignment="Bottom" HorizontalAlignment="Right" Margin="0,0,15,15" Background="Transparent" BorderBrush="Transparent">
-                        <iconPacks:PackIconCodicons Kind="OpenPreview"></iconPacks:PackIconCodicons>
+                    <Button Style="{StaticResource ButtonIcon}" Width="40" hc:IconElement.Geometry="{DynamicResource AssetBrowserOpenPreview}" VerticalAlignment="Bottom" HorizontalAlignment="Right" Margin="0,0,15,15" Background="Transparent" BorderBrush="Transparent" RenderTransformOrigin="0.5,0.5">
+                        <Button.RenderTransform>
+                            <TransformGroup>
+                                <ScaleTransform/>
+                                <SkewTransform/>
+                                <RotateTransform Angle="180"/>
+                                <TranslateTransform/>
+                            </TransformGroup>
+                        </Button.RenderTransform>
                     </Button>
                 </Grid>
             </Grid>
