--- a/WolvenKit/Views/Wizards/WizardPages/FirstSetupWizard/CreateUserView.xaml
+++ b/WolvenKit/Views/Wizards/WizardPages/FirstSetupWizard/CreateUserView.xaml
@@ -5,7 +5,7 @@
                    xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
                    xmlns:hc="https://handyorg.github.io/handycontrol">
 
-    <Grid HorizontalAlignment="Stretch" Grid.Row="3" >
+    <Grid VerticalAlignment="Center" Grid.Row="3" >
         <Grid Margin="5,5,5,5" Background="{DynamicResource MahApps.Brushes.ThemeBackground}" HorizontalAlignment="Stretch">
             <Grid Grid.Row="1" HorizontalAlignment="Stretch">
                 <StackPanel Margin="0,10,0,0" Orientation="Vertical" VerticalAlignment="Top">
