--- a/WolvenKit/Views/Wizards/WizardPages/FirstSetupWizard/SelectThemeView.xaml
+++ b/WolvenKit/Views/Wizards/WizardPages/FirstSetupWizard/SelectThemeView.xaml
@@ -8,8 +8,8 @@
     mc:Ignorable="av"
     x:Class="WolvenKit.Views.Wizards.WizardPages.FirstSetupWizard.SelectThemeView"
     Initialized="UserControl_Initialized_1">
-    
-    <Grid HorizontalAlignment="Stretch" Grid.Row="3" >
+
+    <Grid VerticalAlignment="Center" Grid.Row="3" >
         <Grid Margin="5,5,5,5" Background="{DynamicResource MahApps.Brushes.ThemeBackground}" HorizontalAlignment="Stretch">
             <Grid Grid.Row="1" HorizontalAlignment="Stretch">
                 <StackPanel Margin="0,10,0,0" Orientation="Vertical" VerticalAlignment="Top">
