--- a/WolvenKit/Views/Wizards/WizardPages/ProjectWizard/ProjectConfigurationView.xaml
+++ b/WolvenKit/Views/Wizards/WizardPages/ProjectWizard/ProjectConfigurationView.xaml
@@ -7,7 +7,7 @@
     xmlns:hc="https://handyorg.github.io/handycontrol"                   
     xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks">
 
-    <Grid HorizontalAlignment="Stretch" Grid.Row="3" MinWidth="370" >
+    <Grid  VerticalAlignment="Center" Grid.Row="3" MinWidth="370" >
         
         <Grid Margin="5,5,5,5" Background="{DynamicResource MahApps.Brushes.ThemeBackground}" HorizontalAlignment="Stretch">
             
@@ -15,7 +15,6 @@
                 
                 <StackPanel Margin="0,10,0,0" Orientation="Vertical" VerticalAlignment="Top">
                     
-                    <TextBlock Text="Project Configuration"  FontSize="14" Grid.Row="0" HorizontalAlignment="Left" VerticalAlignment="Center" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" Margin="10,10,0,10"></TextBlock>
                     
                     <Grid Margin="22,0,0,0" >
                         <StackPanel>
