--- a/WolvenKit/Views/RibbonView.xaml
+++ b/WolvenKit/Views/RibbonView.xaml
@@ -60,7 +60,9 @@
                         <fluent:Button Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}"
                                         Height="60"
                                         Icon="{iconPacks:Codicons Kind=Home}"
-                                        FontSize="18" Click="ShowStartScreen_OnClick" OverridesDefaultStyle="True">
+                                        FontSize="18"
+                                       Click="ShowStartScreen_OnClick"
+                                       OverridesDefaultStyle="True">
                             Home
                         </fluent:Button>
                         <fluent:SeparatorTabItem Height="Auto" Margin="20,10,20,10"/>
@@ -281,8 +283,44 @@
 
                 <!-- Quick Access Tools -->
                 <fluent:RibbonGroupBox Header="Quick Access">
-                    <fluent:Button Click="CBAssetBrowserItem_Selected" Header="Asset Browser"/>
+                    <fluent:Button Click="CBAssetBrowserItem_Selected" Header="Asset Browser">
+                        <fluent:Button.LargeIcon>
+                            <iconPacks:PackIconBootstrapIcons HorizontalAlignment="Center" VerticalAlignment="Stretch" Kind="InboxesFill" Height="25" Width="25"></iconPacks:PackIconBootstrapIcons>
+                        </fluent:Button.LargeIcon>
+                    </fluent:Button>
 
+                    <fluent:Button Click="CBAudioToolItem_Selected" Header="Audio Tool">
+                        <fluent:Button.LargeIcon>
+                            <iconPacks:PackIconBootstrapIcons HorizontalAlignment="Center" VerticalAlignment="Stretch" Kind="Soundwave" Height="25" Width="25"></iconPacks:PackIconBootstrapIcons>
+                        </fluent:Button.LargeIcon>
+                    </fluent:Button>
+
+
+                
+
+                    <fluent:Button Visibility="Visible" Click="CBPluginManager_Selected" Header="Plugin Manager">
+                        <fluent:Button.LargeIcon>
+                            <iconPacks:PackIconBootstrapIcons HorizontalAlignment="Center" VerticalAlignment="Stretch" Kind="PlugFill" Height="25" Width="25"></iconPacks:PackIconBootstrapIcons>
+                        </fluent:Button.LargeIcon>
+                    </fluent:Button>
+                    
+                    <fluent:Button Visibility="Collapsed" Click="" Header="Journal Editor">
+                        <fluent:Button.LargeIcon>
+                            <iconPacks:PackIconBootstrapIcons HorizontalAlignment="Center" VerticalAlignment="Stretch" Kind="JournalBookmarkFill" Height="25" Width="25"></iconPacks:PackIconBootstrapIcons>
+                        </fluent:Button.LargeIcon>
+                    </fluent:Button>
+
+                    <fluent:Button Visibility="Collapsed" Click="CBVisualEditorItem_Selected" Header="Visual Editor">
+                        <fluent:Button.LargeIcon>
+                            <iconPacks:PackIconBootstrapIcons HorizontalAlignment="Center" VerticalAlignment="Stretch" Kind="Eye" Height="25" Width="25"></iconPacks:PackIconBootstrapIcons>
+                        </fluent:Button.LargeIcon>
+                    </fluent:Button>
+
+                    <fluent:Button Visibility="Collapsed" Click="CBCodeEditorItem_Selected" Header="Code Editor">
+                        <fluent:Button.LargeIcon>
+                            <iconPacks:PackIconBootstrapIcons HorizontalAlignment="Center" VerticalAlignment="Stretch" Kind="FileEarmarkCode" Height="25" Width="25"></iconPacks:PackIconBootstrapIcons>
+                        </fluent:Button.LargeIcon>
+                    </fluent:Button>
 
                 </fluent:RibbonGroupBox>
             </fluent:RibbonTabItem>
