--- a/WolvenKit/Views/HomePage/Pages/UserPageView.xaml
+++ b/WolvenKit/Views/HomePage/Pages/UserPageView.xaml
@@ -1,12 +1,32 @@
 ﻿<catel:UserControl x:Class="WolvenKit.Views.HomePage.Pages.UserPageView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                   xmlns:catel="http://schemas.catelproject.com" xmlns:hc="https://handyorg.github.io/handycontrol" xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks">
+                   xmlns:catel="http://schemas.catelproject.com" 
+                   xmlns:hc="https://handyorg.github.io/handycontrol" 
+                   xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks">
 
     <Grid hc:ThemeManager.AccentColor="{DynamicResource MahApps.Brushes.Accent3}" Background="{DynamicResource MahApps.Brushes.ThemeBackground}" MinWidth="300" MinHeight="300" >
         
         
         <Grid Margin="3,75,3,0">
+
+
+            <StackPanel>
+
+                <Border Background="Gray">
+                    <Grid>
+                        <StackPanel HorizontalAlignment="Right" Orientation="Horizontal">
+                            <Border Margin="15" BorderThickness="2" BorderBrush="Red">
+                                <TextBlock  Text="User"/>
+
+                            </Border>
+
+                        </StackPanel>
+
+                    </Grid>
+                </Border>
+            </StackPanel>
+            
          
         </Grid>      
         
