--- a/WolvenKit/Views/VisualEditor/VisualEditorView.xaml
+++ b/WolvenKit/Views/VisualEditor/VisualEditorView.xaml
@@ -34,7 +34,7 @@
 
 
 
-    <Border hc:ThemeManager.AccentColorElement="{DynamicResource MahApps.Brushes.Accent3}"  BorderBrush="{DynamicResource MahApps.Brushes.Accent4}" BorderThickness="1">
+    <Border hc:ThemeManager.AccentColor="{DynamicResource MahApps.Brushes.Accent3}"  BorderBrush="{DynamicResource MahApps.Brushes.Accent4}" BorderThickness="1">
         <Grid Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}">
 
 
