--- a/WolvenKit/Views/SettingsPages/SubPages/General/AccountSubSettingsView.xaml
+++ b/WolvenKit/Views/SettingsPages/SubPages/General/AccountSubSettingsView.xaml
@@ -4,7 +4,7 @@
 
                    xmlns:catel="http://schemas.catelproject.com" xmlns:hc="https://handyorg.github.io/handycontrol">
 
-    <Grid hc:ThemeManager.AccentColorElement="{DynamicResource MahApps.Brushes.Accent3}">
+    <Grid hc:ThemeManager.AccentColor="{DynamicResource MahApps.Brushes.Accent3}">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="1*"/>
             <ColumnDefinition Width="1*"/>
