--- a/WolvenKit/Views/UserControlHostWindowView.xaml
+++ b/WolvenKit/Views/UserControlHostWindowView.xaml
@@ -23,7 +23,7 @@
 
     </catel:DataWindow.Resources>
     <Grid>
-        <Border hc:ThemeManager.AccentColorElement="{DynamicResource MahApps.Brushes.Accent3}" Width="auto" Height="auto" BorderBrush="{DynamicResource MahApps.Brushes.Accent4}" BorderThickness="1">
+        <Border hc:ThemeManager.AccentColor="{DynamicResource MahApps.Brushes.Accent3}" Width="auto" Height="auto" BorderBrush="{DynamicResource MahApps.Brushes.Accent4}" BorderThickness="1">
 
             <Grid Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}">
 
