--- a/WolvenKit/Views/UserControlHostWindowView.xaml
+++ b/WolvenKit/Views/UserControlHostWindowView.xaml
@@ -11,7 +11,7 @@
                   WindowStartupLocation="CenterScreen"  
             
                   WindowStyle="None" 
-                  Title="{Binding Content.Name, ElementName=UserContentControl}">
+                  Title="{Binding Content.Tag, ElementName=UserContentControl}">
     
     <catel:DataWindow.Resources>
         <ResourceDictionary>
@@ -63,7 +63,7 @@
 
                 <Grid  Margin="3,3,3,3">
 
-                    <ContentControl  x:Name="UserContentControl" Tag="{Binding Content.Name,  ElementName=UserContentControl}"/>
+                    <ContentControl  x:Name="UserContentControl"/>
 
                 </Grid>
             </Grid>
